[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/boss2-test.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Boss2.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "attack"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.32, 0.45, 0.54, 0.6, 0.64, 0.69 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24, 25, 26, 27, 28, 29, 30 ]
}

[sub_resource type="Animation" id=2]
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.17, 0.28, 0.41, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14 ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.5, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionPolygon2D:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ PoolVector2Array( -56, -16, -56, 32, -48, 48, -32, 64, -24, 64, -32, 48, -32, 40, -32, 32, -16, 40, 8, 40, 40, 24, 32, 48, 24, 64, 40, 56, 56, 32, 56, -24, 40, -56, 16, -64, -16, -64, -40, -56 ), PoolVector2Array( -56, -16, -56, 32, -48, 48, -40, 64, -40, 64, -40, 48, -40, 40, -32, 32, -16, 40, 8, 40, 40, 24, 32, 48, 32, 64, 40, 56, 56, 32, 56, -24, 40, -56, 16, -64, -16, -64, -40, -56 ), PoolVector2Array( -56, -16, -56, 32, -56, 48, -64, 64, -48, 56, -40, 48, -40, 40, -32, 32, -16, 40, 8, 40, 32, 32, 40, 48, 64, 64, 56, 48, 56, 32, 56, -24, 40, -56, 16, -64, -16, -64, -40, -56 ), PoolVector2Array( -56, -16, -56, 32, -64, 48, -72, 72, -64, 64, -48, 48, -40, 40, -32, 32, -16, 40, 8, 40, 32, 32, 40, 48, 64, 64, 56, 48, 56, 32, 56, -24, 40, -56, 16, -64, -16, -64, -40, -56 ), PoolVector2Array( -56, -16, -56, 32, -48, 48, -40, 64, -40, 56, -40, 48, -40, 40, -32, 32, -16, 40, 8, 40, 32, 32, 32, 48, 32, 64, 48, 48, 56, 32, 56, -24, 40, -56, 16, -64, -16, -64, -40, -56 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 2.1, 2.3 ), Vector2( 2, 2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.462745, 0.462745, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17, 18, 19, 20, 21 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionPolygon2D:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ PoolVector2Array( -56, -16, -56, 32, -48, 48, -32, 64, -24, 64, -32, 48, -32, 40, -32, 32, -16, 40, 8, 40, 40, 24, 32, 48, 24, 64, 40, 56, 56, 32, 56, -24, 40, -56, 16, -64, -16, -64, -40, -56 ), PoolVector2Array( -56, -16, -56, 32, -40, 64, -32, 40, -32, 40, -32, 32, -16, 40, 8, 40, 32, 32, 32, 64, 40, 56, 56, 32, 56, -24, 40, -56, 16, -64, -16, -64, -40, -56 ), PoolVector2Array( -56, -16, -56, 32, -64, 56, -72, 64, -56, 56, -40, 40, -32, 32, -16, 40, 8, 40, 40, 24, 48, 48, 72, 72, 64, 56, 56, 32, 56, -24, 40, -56, 16, -64, -16, -64, -40, -56 ), PoolVector2Array( -56, -16, -56, 32, -40, 64, -32, 40, -32, 40, -32, 32, -16, 40, 8, 40, 32, 32, 32, 64, 40, 56, 56, 32, 56, -24, 40, -56, 16, -64, -16, -64, -40, -56 ) ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 32.0

[node name="Boss2" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 1 )
anims/eat = SubResource( 2 )
anims/growl = SubResource( 3 )
anims/idle = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
z_index = -1
texture = ExtResource( 1 )
vframes = 4
hframes = 8

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 24 )
shape = SubResource( 5 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -56, -16, -56, 32, -48, 48, -32, 64, -24, 64, -32, 48, -32, 40, -32, 32, -16, 40, 8, 40, 40, 24, 32, 48, 24, 64, 40, 56, 56, 32, 56, -24, 40, -56, 16, -64, -16, -64, -40, -56 )

[node name="GrowlTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 1000 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0

[node name="Tween2" type="Tween" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="GrowlTimer" to="." method="_on_GrowlTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
